--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -233,6 +233,7 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int Width){
 
 我们现在将瓦片矩阵乘法内核扩展到处理任意宽度的矩阵。这些扩展将允许内核正确处理宽度不是瓦片宽度倍数的矩阵。让我们将图 5.7 中的小示例更改为使用 3x3 的 M、N 和 P 矩阵。修订后的示例如图 5.11 所示。注意，矩阵的宽度为 3，这不是瓦片宽度（2）的倍数。图 5.11 显示了块 `<sub>0,0</sub>` 第二阶段的内存访问模式。我们可以看到，线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 将尝试加载不存在的 M 元素。同样，我们也看到线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 将尝试访问不存在的 N 元素。
 
+![image](https://github.com/user-attachments/assets/d393a56b-506a-41ec-a907-2dc004b19b2a)
 > 图 5.11 加载接近边缘的输入矩阵元素：块 <sub>0,0</sub> 的阶段。
 
 访问不存在的元素存在两种问题。首先，访问超出行末尾的不存在元素（图 5.11 中线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 的 M 访问）会导致这些访问错误地访问了不正确的元素。在我们的示例中，这些线程会尝试访问 M<sub>0,3</sub> 和 M<sub>1,3</sub>，这些元素并不存在。那么这些内存加载会发生什么？为了回答这个问题，我们需要回到二维矩阵的线性化布局。
@@ -243,6 +244,7 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int Width){
 
 从我们到目前为止的讨论来看，可能会觉得问题访问仅出现在线程执行的最后阶段。这表明我们可以通过在瓦片内核执行的最后阶段采取特别措施来处理这个问题。不幸的是，事实并非如此。问题访问可以出现在所有阶段。图 5.12 显示了块 <sub>1,1</sub> 在阶段 0 的内存访问模式。我们看到线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 尝试访问不存在的 M 元素 M<sub>3,0</sub> 和 M<sub>3,1</sub>，而线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 尝试访问不存在的 N 元素 N<sub>0,3</sub> 和 N<sub>1,3</sub>。
 
+![image](https://github.com/user-attachments/assets/d910e62e-dde2-471c-b8ac-c49bf63cce49)
 > 图 5.12 在块 <sub>1,1</sub> 的阶段 0 中加载输入元素。
 
 注意，这些问题访问不能仅通过排除不计算有效 P 元素的线程来避免。例如，块 <sub>1,1</sub> 中的线程 <sub>1,0</sub> 不计算任何有效的 P 元素。然而，它需要在阶段 0 中加载 M<sub>2,1</sub> 以供块 <sub>1,1</sub> 中的其他线程使用。此外，注意到一些计算有效 P 元素的线程会尝试访问不存在的 M 或 N 元素。例如，如图 5.11 所示，块 <sub>0,0</sub> 中的线程 <sub>0,1</sub> 计算了一个有效的 P 元素 P<sub>0,1</sub>。然而，它在阶段 1 中尝试访问不存在的 M<sub>0,3</sub>。这两个事实表明，我们需要对加载 M 瓦片、加载 N 瓦片以及计算/存储 P 元素使用不同的边界条件测试。一个经验法则是，每个内存访问都需要有一个相应的检查，以确保访问中使用的索引在被访问的数组的边界内。
@@ -276,9 +278,69 @@ for (int ph; ph < ceil(Width/(float)TILE_WIDTH); ++ph){
 if (Row < Width) && (Col < Width){
   P[Row*Width + Col] = Pvalue};
 ```
+> 图 5.13 带有边界条件检查的瓦片矩阵乘法内核。
 
 通过边界条件检查，瓦片矩阵乘法内核只差一步就成为通用矩阵乘法内核。一般来说，矩阵乘法定义为矩形矩阵：一个 j×k 的 M 矩阵乘以一个 k×l 的 N 矩阵会得到一个 j×l 的 P 矩阵。我们的内核目前只能处理方形矩阵。
 
-> 图 5.13 带有边界条件检查的瓦片矩阵乘法内核。
 
 幸运的是，将我们的内核进一步扩展为通用矩阵乘法内核非常简单。我们需要做一些简单的更改。首先，将 `Width` 参数替换为三个无符号整数参数：`j`、`k` 和 `l`。其中，`Width` 用于表示 M 的高度或 P 的高度时，用 `j` 替换它；`Width` 用于表示 M 的宽度或 N 的高度时，用 `k` 替换它；`Width` 用于表示 N 的宽度或 P 的宽度时，用 `l` 替换它。具有这些更改的内核修订留作练习。
+
+## 5.6 内存使用对占用率的影响
+
+回顾一下，在第4章《计算架构与调度》中，我们讨论了最大化线程在 SM（流处理器）上的占用率的重要性，以便能够容忍长延迟操作。内核的内存使用在占用率调整中扮演着重要角色。虽然 CUDA 寄存器和共享内存可以极大地减少对全局内存的访问次数，但必须小心地保持在 SM 的这些内存的容量范围内。每个 CUDA 设备提供有限的资源，这限制了在给定应用中可以同时驻留在 SM 中的线程数量。一般来说，每个线程所需的资源越多，能够驻留在每个 SM 中的线程数量就越少。
+
+我们在第4章《计算架构与调度》中看到，寄存器使用可能是占用率的限制因素。共享内存使用也可能限制每个 SM 可以分配的线程数量。例如，A100 GPU 可以配置为每个 SM 具有最多 164 KB 的共享内存，并支持每个 SM 最多 2048 个线程。因此，为了使用所有 2048 个线程槽，线程块每个线程使用的共享内存平均值不应超过 (164 KB)/(2048 线程) = 82 B/线程。在瓦片矩阵乘法示例中，每个块有 `TILE_WIDTH<sup>2</sup>` 个线程，并为 Mds 使用了 `TILE_WIDTH<sup>2</sup>`*4B 的共享内存，为 Nds 使用了 `TILE_WIDTH<sup>2</sup>`*4B 的共享内存。因此，线程块的共享内存平均使用量是 (`TILE_WIDTH<sup>2</sup>`*4B + `TILE_WIDTH<sup>2</sup>`*4B)/(`TILE_WIDTH<sup>2</sup>` 线程) = 8 B/线程。因此，瓦片矩阵乘法内核的占用率不会受到共享内存的限制。
+
+然而，考虑一个内核，其中线程块使用 32 KB 的共享内存，每个线程块有 256 个线程。在这种情况下，内核使用了 (32 KB)/(256 线程) = 132 B/线程 的共享内存。使用这样的共享内存，内核无法实现完全占用率。每个 SM 最大只能容纳 (164 KB)/(132 B/线程) = 1272 个线程。因此，该内核的最大可实现占用率将是 (1272 分配线程)/(2048 最大线程) = 62%。
+
+请注意，每个 SM 中的共享内存大小也可能因设备而异。每一代或型号的设备在每个 SM 中的共享内存量可能不同。通常，内核能够根据硬件中可用的共享内存量使用不同量的共享内存是很有益的。也就是说，我们可能希望主机代码动态确定共享内存的大小，并调整内核使用的共享内存量。这可以通过调用 `cudaGetDeviceProperties` 函数来完成。假设将变量 `&devProp` 传递给该函数。在这种情况下，字段 `devProp.sharedMemPerBlock` 给出了每个 SM 中可用的共享内存量。然后，程序员可以确定每个块应使用多少共享内存。
+
+不幸的是，图 5.9 和图 5.13 中的内核不支持主机代码对共享内存使用的动态调整。图 5.9 中使用的声明将其共享内存使用大小硬编码为编译时常量：
+
+```cuda
+__shared__ float Mds[TILE_WIDTH][TILE_WIDTH];
+__shared__ float Nds[TILE_WIDTH][TILE_WIDTH];
+```
+
+也就是说，`Mds` 和 `Nds` 的大小设置为 `TILE_WIDTH<sup>2</sup>` 个元素，无论编译时 `TILE_WIDTH` 的值是多少。由于代码中包含 `#define TILE_WIDTH 16`，因此 `Mds` 和 `Nds` 将有 256 个元素。如果我们想改变 `Mds` 和 `Nds` 的大小，我们需要更改 `TILE_WIDTH` 的值并重新编译代码。内核无法在运行时轻松调整其共享内存使用，而无需重新编译。
+
+我们可以通过在 CUDA 中使用不同的声明样式来启用这种调整，方法是在共享内存声明前添加 C extern 关键字，并在声明中省略数组的大小。基于这种样式，`Mds` 和 `Nds` 的声明需要合并成一个动态分配的数组：`extern __shared__ float Mds_Nds[];`
+
+由于只有一个合并数组，我们还需要手动定义 `Mds` 部分和 `Nds` 部分的数组起始位置。注意，合并的数组是一维的。我们需要使用基于垂直和水平索引的线性化索引来访问它。
+
+在运行时，当我们调用内核时，可以根据设备查询结果动态配置每个块将使用的共享内存量，并将其作为内核调用的第三个配置参数提供。例如，修订后的内核可以用以下语句启动：
+
+```cuda
+size_t size = calculate_appropriate_SM_usage(devProp.sharedMemPerBlock, ...);
+
+matrixMulKernel<<<dimGrid, dimBlock, size>>>(Md, Nd, Pd, Width, size/2, size/2);
+```
+
+其中 `size_t` 是一个用于声明变量以存储动态分配数据结构大小信息的内置类型。大小以字节为单位表示。在我们的矩阵乘法示例中，对于一个 16x16 的瓦片，我们需要的大小是 2*16*16*4=2048 字节，以容纳 `Mds` 和 `Nds`。我们省略了计算运行时设置 `size` 值的详细信息，留作读者练习。
+
+在图 5.14 中，我们展示了如何修改图 5.9 和图 5.11 中的内核代码，以便为 `Mds` 和 `Nds` 数组使用动态大小的共享内存。在这个示例中，我们还添加了两个参数：第一个参数是 `Mds` 部分的大小，第二个参数是 `Nds` 部分的大小，单位为字节。注意，在上面的主机代码中，我们传递了 size/2 作为这些参数的值，即 1024 字节。通过第 06 行和第 07 行的赋值，其余的内核代码可以将 `Mds` 和 `Nds` 作为数组的基址，并使用线性化索引访问 `Mds` 和 `Nds` 元素。例如，可以使用 `Mds[ty*TILE_WIDTH+tx]` 代替 `Mds[ty][tx]`。
+
+```cuda
+# define TILE_WIDTH 16
+__global__ void matrixMulKernel(float* M, float* N, float* P, int Width,
+                                  unsigned Mds_sz, unsigned Nds_sz){
+    extern __shared__ char Mds_Nds[];
+    float *Mds = (float *) Mds_Nds;
+    float *Nds = (float *) Mds_Nds + Mds_sz;
+}
+```
+> 图 5.14 带有动态大小共享内存使用的瓦片矩阵乘法内核。
+
+## 5.7 总结
+
+总之，现代处理器中程序的执行速度可能会受到内存速度的严重限制。为了实现 CUDA 设备执行吞吐量的良好利用，需要在内核代码中追求高的计算与全局内存访问比。如果比率低，内核是内存绑定的。也就是说，其执行速度受到从内存中访问操作数的速率的限制。
+
+CUDA 提供了对寄存器、共享内存和常量内存的访问。这些内存比全局内存小得多，但可以以更高的速度访问。有效地使用这些内存需要重新设计算法。我们以矩阵乘法为例，展示了瓦片技术，这是一种流行的策略，可以增强数据访问的局部性，并实现对共享内存的有效利用。在并行编程中，瓦片技术利用屏障同步强制多个线程在每个执行阶段共同关注输入数据的一个子集，以便将这些子集数据放入这些特殊的内存类型中，从而实现更高的访问速度。
+
+然而，CUDA 程序员需要意识到这些特殊类型内存的有限大小。它们的容量是实现依赖的。一旦超出其容量，它们会限制每个 SM 中可以同时执行的线程数量，并可能对 GPU 的计算吞吐量及其容忍延迟的能力产生负面影响。在开发应用程序时能够理解硬件限制是并行编程的一个关键方面。
+
+虽然我们在 CUDA C 编程的背景下介绍了瓦片算法，但它是一种在几乎所有类型的并行计算系统中实现高性能的有效策略。原因是，应用程序必须在数据访问中表现出局部性，以有效利用这些系统中的高速内存。例如，在多核 CPU 系统中，数据局部性允许应用程序有效使用片上数据缓存，以减少内存访问延迟并实现高性能。这些片上数据
+
+缓存的大小也有限，并且需要计算展示局部性。因此，读者在为其他类型的并行计算系统使用其他编程模型开发并行应用程序时，也会发现瓦片算法是有用的。
+
+我们本章的目标是介绍局部性、瓦片技术和不同的 CUDA 内存类型。我们介绍了使用共享内存的瓦片矩阵乘法内核。我们进一步研究了边界测试条件的需要，以允许在应用瓦片技术时支持任意数据维度。我们还简要讨论了动态大小共享内存分配的使用，以便内核可以根据硬件能力调整每个块使用的共享内存大小。我们没有讨论寄存器在瓦片技术中的使用。我们将在本书第二部分讨论并行算法模式时解释寄存器在瓦片算法中的使用。
