--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -1,13 +1,13 @@
 # 5_内存架构和数据局部性
 
-* 5.1 [内存访问效率的重要性]
-* 5.2 [CUDA 内存类型]
-* 5.3 [通过分块减少内存流量]
-* 5.4 [分块矩阵乘法核]
-* 5.5 [边界检查]
-* 5.6 [内存使用对占用率的影响]
-* 5.7 [总结]
-* [练习]
+* 5.1 [内存访问效率的重要性](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#51-%E5%86%85%E5%AD%98%E8%AE%BF%E9%97%AE%E6%95%88%E7%8E%87%E7%9A%84%E9%87%8D%E8%A6%81%E6%80%A7)
+* 5.2 [CUDA 内存类型](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#52-cuda-%E5%86%85%E5%AD%98%E7%B1%BB%E5%9E%8B)
+* 5.3 [通过分块减少内存流量](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#53-%E7%93%A6%E7%89%87%E6%8A%80%E6%9C%AF%E4%BB%A5%E5%87%8F%E5%B0%91%E5%86%85%E5%AD%98%E6%B5%81%E9%87%8F)
+* 5.4 [分块矩阵乘法核](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#54-%E7%93%A6%E7%89%87%E7%9F%A9%E9%98%B5%E4%B9%98%E6%B3%95%E5%86%85%E6%A0%B8)
+* 5.5 [边界检查](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#55-%E8%BE%B9%E7%95%8C%E6%A3%80%E6%9F%A5)
+* 5.6 [内存使用对占用率的影响](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#56-%E5%86%85%E5%AD%98%E4%BD%BF%E7%94%A8%E5%AF%B9%E5%8D%A0%E7%94%A8%E7%8E%87%E7%9A%84%E5%BD%B1%E5%93%8D)
+* 5.7 [总结](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#57-%E6%80%BB%E7%BB%93)
+* [练习]()
 
 到目前为止，我们已经学习了如何编写 CUDA 内核函数以及如何配置和协调大量线程的执行。我们还研究了当前 GPU 硬件的计算架构以及线程如何在硬件上调度执行。在本章中，我们将重点关注 GPU 的片上内存架构，并开始研究如何组织和定位数据，以便大量线程高效访问。到目前为止，我们研究的 CUDA 内核可能只能达到底层硬件潜在速度的一小部分。这种性能较差的原因是全局内存（通常由片外 DRAM 实现）通常具有较长的访问延迟（数百个时钟周期）和有限的访问带宽。尽管可以通过大量可用线程来理论上容忍长时间的内存访问延迟，但很容易遇到全局内存访问路径上的流量拥堵情况，这会阻止大多数线程取得进展，从而使流式多处理器（SM）中的一些内核处于空闲状态。为了绕过这种拥堵，GPU 提供了许多额外的片上内存资源来访问数据，这些资源可以消除大部分进出全局内存的流量。在本章中，我们将研究如何使用不同类型的内存来提升 CUDA 内核的执行性能。
 
@@ -289,7 +289,7 @@ if (Row < Width) && (Col < Width){
 
 回顾一下，在第4章《计算架构与调度》中，我们讨论了最大化线程在 SM（流处理器）上的占用率的重要性，以便能够容忍长延迟操作。内核的内存使用在占用率调整中扮演着重要角色。虽然 CUDA 寄存器和共享内存可以极大地减少对全局内存的访问次数，但必须小心地保持在 SM 的这些内存的容量范围内。每个 CUDA 设备提供有限的资源，这限制了在给定应用中可以同时驻留在 SM 中的线程数量。一般来说，每个线程所需的资源越多，能够驻留在每个 SM 中的线程数量就越少。
 
-我们在第4章《计算架构与调度》中看到，寄存器使用可能是占用率的限制因素。共享内存使用也可能限制每个 SM 可以分配的线程数量。例如，A100 GPU 可以配置为每个 SM 具有最多 164 KB 的共享内存，并支持每个 SM 最多 2048 个线程。因此，为了使用所有 2048 个线程槽，线程块每个线程使用的共享内存平均值不应超过 (164 KB)/(2048 线程) = 82 B/线程。在瓦片矩阵乘法示例中，每个块有 `TILE_WIDTH<sup>2</sup>` 个线程，并为 Mds 使用了 `TILE_WIDTH<sup>2</sup>`*4B 的共享内存，为 Nds 使用了 `TILE_WIDTH<sup>2</sup>`*4B 的共享内存。因此，线程块的共享内存平均使用量是 (`TILE_WIDTH<sup>2</sup>`*4B + `TILE_WIDTH<sup>2</sup>`*4B)/(`TILE_WIDTH<sup>2</sup>` 线程) = 8 B/线程。因此，瓦片矩阵乘法内核的占用率不会受到共享内存的限制。
+我们在第4章《计算架构与调度》中看到，寄存器使用可能是占用率的限制因素。共享内存使用也可能限制每个 SM 可以分配的线程数量。例如，A100 GPU 可以配置为每个 SM 具有最多 164 KB 的共享内存，并支持每个 SM 最多 2048 个线程。因此，为了使用所有 2048 个线程槽，线程块每个线程使用的共享内存平均值不应超过 (164 KB)/(2048 线程) = 82 B/线程。在瓦片矩阵乘法示例中，每个块有 `TILE_WIDTH<sup>2</sup>` 个线程，并为 Mds 使用了 `TILE_WIDTH`<sup>2</sup>*4B 的共享内存，为 Nds 使用了 `TILE_WIDTH`<sup>2</sup>*4B 的共享内存。因此，线程块的共享内存平均使用量是 (`TILE_WIDTH`<sup>2</sup>*4B + `TILE_WIDTH`<sup>2</sup>*4B)/(`TILE_WIDTH`<sup>2</sup> 线程) = 8 B/线程。因此，瓦片矩阵乘法内核的占用率不会受到共享内存的限制。
 
 然而，考虑一个内核，其中线程块使用 32 KB 的共享内存，每个线程块有 256 个线程。在这种情况下，内核使用了 (32 KB)/(256 线程) = 132 B/线程 的共享内存。使用这样的共享内存，内核无法实现完全占用率。每个 SM 最大只能容纳 (164 KB)/(132 B/线程) = 1272 个线程。因此，该内核的最大可实现占用率将是 (1272 分配线程)/(2048 最大线程) = 62%。
 
@@ -302,7 +302,7 @@ __shared__ float Mds[TILE_WIDTH][TILE_WIDTH];
 __shared__ float Nds[TILE_WIDTH][TILE_WIDTH];
 ```
 
-也就是说，`Mds` 和 `Nds` 的大小设置为 `TILE_WIDTH<sup>2</sup>` 个元素，无论编译时 `TILE_WIDTH` 的值是多少。由于代码中包含 `#define TILE_WIDTH 16`，因此 `Mds` 和 `Nds` 将有 256 个元素。如果我们想改变 `Mds` 和 `Nds` 的大小，我们需要更改 `TILE_WIDTH` 的值并重新编译代码。内核无法在运行时轻松调整其共享内存使用，而无需重新编译。
+也就是说，`Mds` 和 `Nds` 的大小设置为 `TILE_WIDTH`<sup>2</sup> 个元素，无论编译时 `TILE_WIDTH` 的值是多少。由于代码中包含 `#define TILE_WIDTH 16`，因此 `Mds` 和 `Nds` 将有 256 个元素。如果我们想改变 `Mds` 和 `Nds` 的大小，我们需要更改 `TILE_WIDTH` 的值并重新编译代码。内核无法在运行时轻松调整其共享内存使用，而无需重新编译。
 
 我们可以通过在 CUDA 中使用不同的声明样式来启用这种调整，方法是在共享内存声明前添加 C extern 关键字，并在声明中省略数组的大小。基于这种样式，`Mds` 和 `Nds` 的声明需要合并成一个动态分配的数组：`extern __shared__ float Mds_Nds[];`
 
