--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -344,3 +344,138 @@ CUDA 提供了对寄存器、共享内存和常量内存的访问。这些内存
 缓存的大小也有限，并且需要计算展示局部性。因此，读者在为其他类型的并行计算系统使用其他编程模型开发并行应用程序时，也会发现瓦片算法是有用的。
 
 我们本章的目标是介绍局部性、瓦片技术和不同的 CUDA 内存类型。我们介绍了使用共享内存的瓦片矩阵乘法内核。我们进一步研究了边界测试条件的需要，以允许在应用瓦片技术时支持任意数据维度。我们还简要讨论了动态大小共享内存分配的使用，以便内核可以根据硬件能力调整每个块使用的共享内存大小。我们没有讨论寄存器在瓦片技术中的使用。我们将在本书第二部分讨论并行算法模式时解释寄存器在瓦片算法中的使用。
+
+## 练习题
+
+1. **矩阵加法中是否可以使用共享内存来减少全局内存带宽消耗？提示：分析每个线程访问的元素，并查看线程之间是否存在共同性。**
+
+   **解答：** 可以使用共享内存来减少全局内存带宽消耗。在矩阵加法中，每个线程都访问相邻的元素，因此在一个线程块内，多个线程会访问矩阵中的相邻元素。如果将这些元素先加载到共享内存中，然后在线程块内进行加法运算，可以减少对全局内存的访问次数，从而降低全局内存带宽的消耗。
+
+2. **绘制图 5.7 的等效图，用于 8*8 矩阵乘法，分别使用 2*2 瓦片和 4*4 瓦片。验证全局内存带宽的减少是否确实与瓦片尺寸的维度大小成正比。**
+
+   **解答：** 绘制这些图的具体步骤涉及到图形绘制。一般来说，较大的瓦片尺寸会减少全局内存带宽的需求，因为每个线程块处理的数据量增多，减少了对全局内存的访问频率。具体来说，使用 4*4 瓦片会减少对全局内存的带宽消耗，比例上通常接近于瓦片尺寸的平方。
+
+3. **如果在图 5.9 的内核中忘记使用一个或两个 `__syncthreads()`，可能会出现什么类型的错误执行行为？**
+
+   **解答：** 忘记使用 `__syncthreads()` 可能导致线程间的数据竞争和不一致性问题。线程可能会在没有同步的情况下访问和修改共享内存中的数据，导致错误的计算结果或数据丢失。例如，如果一个线程在其他线程完成对共享内存的写操作之前读取数据，那么它可能会读取到不完整或过时的数据。
+
+4. **假设寄存器或共享内存的容量不是问题，使用共享内存而不是寄存器来保存从全局内存中获取的值的一个重要原因是什么？**
+
+   **解答：** 使用共享内存而不是寄存器的一个重要原因是共享内存的容量通常比寄存器要大。虽然寄存器的访问速度更快，但其数量有限。如果某些数据需要在多个线程之间共享，使用共享内存可以避免对全局内存的频繁访问，并且允许多个线程共享这些数据，从而提高了效率。
+
+5. **对于我们的瓦片矩阵乘法内核，如果使用 32*32 的瓦片，输入矩阵 M 和 N 的内存带宽使用量减少了多少？**
+
+   **解答：** 使用 32*32 的瓦片会显著减少对全局内存的访问次数。每个线程块会处理更大块的数据，从而减少线程块间对全局内存的访问需求。具体减少的量取决于瓦片的大小与内存访问模式，可以通过比较不同瓦片大小的内存带宽使用量来计算。
+
+6. **假设 CUDA 内核被启动时有 1000 个线程块，每个线程块有 512 个线程。如果在内核中声明了一个局部变量，那么在内核执行生命周期内会创建多少个变量版本？**
+
+   **解答：** 局部变量在每个线程中都会有一个版本。因此，局部变量的总版本数为线程块数 × 每个线程块中的线程数，即 1000 × 512 = 512,000 个版本。
+
+7. **在上一个问题中，如果变量被声明为共享内存变量，那么在内核执行生命周期内会创建多少个变量版本？**
+
+   **解答：** 共享内存变量在每个线程块中只有一个版本。因此，总版本数为线程块数，即 1000 个版本。
+
+8. **考虑对两个维度为 N*N 的输入矩阵执行矩阵乘法。每个元素在全局内存中请求的次数是多少，当：**
+
+   a. **没有瓦片时？**
+
+      **解答：** 每个元素在全局内存中请求的次数为 N 次。因为每个元素被每一行的所有线程访问一次。
+
+   b. **使用 T*T 瓦片时？**
+
+      **解答：** 使用 T*T 瓦片时，每个元素会被请求 (N/T)² 次。每个瓦片的每个元素需要被每个线程块内的所有线程访问，因此减少了总请求次数。
+
+9. **一个内核执行 36 次浮点运算和 7 次 32 位全局内存访问。对于以下每个设备属性，指明该内核是计算绑定的还是内存绑定的。**
+
+   a. **峰值 FLOPS = 200 GFLOPS，峰值内存带宽 = 100 GB/秒**
+
+      **解答：** 该内核是内存绑定的，因为内存带宽低于计算能力。内存带宽限制了内核的性能。
+
+   b. **峰值 FLOPS = 300 GFLOPS，峰值内存带宽 = 250 GB/秒**
+
+      **解答：** 该内核是计算绑定的，因为内存带宽足以满足内核的内存需求，计算能力成为限制因素。
+
+10. **为了操作瓦片，一个新的 CUDA 程序员编写了一个设备内核来转置矩阵中的每个瓦片。瓦片大小为 BLOCK_WIDTH x BLOCK_WIDTH，矩阵 A 的每个维度都是 BLOCK_WIDTH 的倍数。下面是内核调用和代码。BLOCK_WIDTH 在编译时已知，可以设置为 1 到 20 之间的任何值。**
+
+    ```cuda
+    dim3 blockDim(BLOCK_WIDTH, BLOCK_WIDTH);
+    dim3 gridDim(A_width/blockDim.x, A_height/blockDim.y);
+    BlockTranspose(float* A_elements, int A_width, int A_height)
+    {
+      __shared__ float blockA[BLOCK_WIDTH][BLOCK_WIDTH];
+
+      int baseIdx = blockIdx.x * BLOCK_WIDTH + threadIdx.x;
+      baseIdx += (blockIdx.y * BLOCK_WIDTH + threadIdx.y) * A_width;
+
+      blockA[threadIdx.y][threadIdx.x] = A_elements[baseIdx];
+      A_elements[baseIdx] = blockA[threadIdx.x][threadIdx.y];
+    }
+    ```
+
+    a. **在 BLOCK_SIZE 的可能值范围内，哪些 BLOCK_SIZE 值使得该内核在设备上正确执行？**
+
+       **解答：** 该内核在 BLOCK_SIZE 的值范围内，BLOCK_SIZE 的值必须小于或等于设备允许的共享内存大小和线程数限制。如果 BLOCK_SIZE 超过这些限制，则会导致内核无法正确执行。
+
+    b. **如果代码在所有 BLOCK_SIZE 值下都无法正确执行，根本原因是什么？建议修改代码以使其适用于所有 BLOCK_SIZE 值。**
+
+       **解答：** 根本原因是 `blockA` 数组的大小由 `BLOCK_WIDTH` 决定，并且 BLOCK_WIDTH 必须小于或等于设备的共享内存限制。如果 BLOCK_WIDTH 过大，则会导致共享内存溢出。建议检查共享内存大小并进行适当调整，确保 BLOCK_WIDTH 在设备共享内存限制内。
+
+11. **考虑以下 CUDA 内核及其对应的主机函数：**
+
+    ```cuda
+    __global__ void foo_kernel(float* a, float* b){
+        unsigned int i = blockIdx.x * blockDim.x + threadIdx.x;
+        float x[4];
+        __shared__ float y_s;
+        __shared__ float b_s[128];
+        for(unsigned int j = 0; j < 4; ++j){
+            x[j] = a[j * blockDim.x * gridDim.x + i];
+        }
+        if(threadIdx.x == 0){
+            y_s = 7.4f;
+        }
+        b_s[threadIdx.x] = b[j];
+        __syncthreads();
+        b[i] = 2.5f * x[0] + 2.7f * x[1] + 6.3f * x[2] + 8.5f * x[3] + y_s * b_s[threadIdx.x] + b_s[(threadIdx.x + 3) % 128];
+    }
+    void foo(int* a_d, int* b_d){
+        unsigned int N = 1024;
+        foo_kernel<<<(N + 128 - 1) / 128, 128>>>(a_d, b_d);
+    }
+    ```
+
+    a. **变量 i 有多少个版本？**
+
+       **解答：** 变量 i 在每个线程中都有一个版本，因此总共有 128 个版本。
+
+    b. **数组 x[] 有多少个版本？**
+
+       **解答：** 数组 x[] 在每个线程中都有一个版本，因此总共有 128 个版本。
+
+    c. **变量 y_s 有多少个版本？**
+
+       **解答：** 变量 y_s 在每个线程块中只有一个版本，因此总共有 8 个版本。
+
+    d. **数组 b_s
+
+[] 有多少个版本？**
+
+       **解答：** 数组 b_s[] 在每个线程块中只有一个版本，因此总共有 8 个版本。
+
+    e. **每个线程块使用的共享内存量是多少（以字节为单位）？**
+
+       **解答：** 共享内存量为 `sizeof(float) * 128` 字节，即 128 个浮点数 × 4 字节/浮点数 = 512 字节。
+
+    f. **内核的浮点运算与全局内存访问比率是多少（以 OP/B 为单位）？**
+
+       **解答：** 每个线程执行 36 次浮点运算和 7 次全局内存访问。因此，浮点运算与全局内存访问的比率是 36 / 7 ≈ 5.14 OP/B。
+
+12. **考虑具有以下硬件限制的 GPU：2048 线程/SM，32 块/SM，64K（65,536）寄存器/SM，以及 96 KB 的共享内存/SM。对于以下每个内核特性，指定内核是否可以达到完全占用。如果不能，请指定限制因素。**
+
+    a. **内核使用 64 线程/块，27 寄存器/线程，以及 4 KB 的共享内存/SM。**
+
+       **解答：** 该内核可以达到完全占用，因为每个线程块使用的寄存器数为 64 × 27 = 1728，远小于每个 SM 的寄存器限制（65,536），并且每个 SM 的共享内存使用量为 4 KB，远小于 96 KB 的共享内存限制。
+
+    b. **内核使用 256 线程/块，31 寄存器/线程，以及 8 KB 的共享内存/SM。**
+
+       **解答：** 该内核不能达到完全占用，因为每个线程块使用的寄存器数为 256 × 31 = 7,936，远低于寄存器限制，但每个 SM 的共享内存使用量为 8 KB。如果每个 SM 的共享内存使用量达到限制，则可能会影响内核的完全占用。
