--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -7,7 +7,7 @@
 * 5.5 [边界检查](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#55-%E8%BE%B9%E7%95%8C%E6%A3%80%E6%9F%A5)
 * 5.6 [内存使用对占用率的影响](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#56-%E5%86%85%E5%AD%98%E4%BD%BF%E7%94%A8%E5%AF%B9%E5%8D%A0%E7%94%A8%E7%8E%87%E7%9A%84%E5%BD%B1%E5%93%8D)
 * 5.7 [总结](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#57-%E6%80%BB%E7%BB%93)
-* [练习]()
+* [练习](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#%E7%BB%83%E4%B9%A0%E9%A2%98)
 
 到目前为止，我们已经学习了如何编写 CUDA 内核函数以及如何配置和协调大量线程的执行。我们还研究了当前 GPU 硬件的计算架构以及线程如何在硬件上调度执行。在本章中，我们将重点关注 GPU 的片上内存架构，并开始研究如何组织和定位数据，以便大量线程高效访问。到目前为止，我们研究的 CUDA 内核可能只能达到底层硬件潜在速度的一小部分。这种性能较差的原因是全局内存（通常由片外 DRAM 实现）通常具有较长的访问延迟（数百个时钟周期）和有限的访问带宽。尽管可以通过大量可用线程来理论上容忍长时间的内存访问延迟，但很容易遇到全局内存访问路径上的流量拥堵情况，这会阻止大多数线程取得进展，从而使流式多处理器（SM）中的一些内核处于空闲状态。为了绕过这种拥堵，GPU 提供了许多额外的片上内存资源来访问数据，这些资源可以消除大部分进出全局内存的流量。在本章中，我们将研究如何使用不同类型的内存来提升 CUDA 内核的执行性能。
 
@@ -456,9 +456,7 @@ CUDA 提供了对寄存器、共享内存和常量内存的访问。这些内存
 
        **解答：** 变量 y_s 在每个线程块中只有一个版本，因此总共有 8 个版本。
 
-    d. **数组 b_s
-
-[] 有多少个版本？**
+    d. **数组 b_s[] 有多少个版本？**
 
        **解答：** 数组 b_s[] 在每个线程块中只有一个版本，因此总共有 8 个版本。
 
