--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -35,6 +35,9 @@ for (int k = 0; k < Width; ++k){
 
 正如我们将看到的，矩阵乘法提供了减少全局内存访问次数的机会，可以通过相对简单的技术来实现。矩阵乘法函数的执行速度可能因全局内存访问次数的减少而有数量级的差异。因此，矩阵乘法提供了一个很好的初始例子来展示这些技术。本章介绍了一种常用的减少全局内存访问次数的技术，并展示了该技术在矩阵乘法中的应用。
 
+|[top]()|
+|-|
+
 ## 5.2 CUDA 内存类型
 
 CUDA 设备包含几种类型的内存，帮助程序员改善计算与全局内存访问的比例。图 5.2 展示了这些 CUDA 设备内存。在图的底部，我们可以看到全局内存和常量内存。这两种内存类型都可以被主机写入（W）和读取（R）。全局内存还可以被设备写入和读取，而常量内存支持设备的短延迟、高带宽的只读访问。我们在第 2 章《异构数据并行计算》中介绍了全局内存，而常量内存在第 7 章《卷积》中将会详细讨论。
