--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -125,6 +125,9 @@ CUDA 中共享内存和寄存器之间的一个重要区别是，驻留在共享
 
 在 CUDA 中，指针可以用来指向全局内存中的数据对象。指针在内核和设备函数中有两种典型的使用方式。首先，如果一个对象由主机函数分配，指向该对象的指针由内存分配 API 函数（如 `cudaMalloc`）初始化，并可以作为参数传递给内核函数，如第 2 章《异构数据并行计算》和第 3 章《多维网格与数据》中所示。第二种使用方式是将声明在全局内存中的变量的地址分配给指针变量。例如，内核函数中的语句 `{float* ptr=&GlobalVar;}` 将 `GlobalVar` 的地址分配给自动指针变量 `ptr`。有关如何在其他内存类型中使用指针，请参考 CUDA 编程指南。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
+
 ## 5.3 瓦片技术以减少内存流量
 
 在 CUDA 中使用设备内存时，我们面临一个内在的权衡：全局内存大但速度慢，而共享内存小但速度快。一个常见的策略是将数据划分为称为“瓦片”的子集，使每个瓦片可以适应共享内存。瓦片这个术语源于这样一个类比：一个大墙（即全局内存数据）可以被小瓦片（即每个可以适应共享内存的子集）覆盖。一个重要的标准是这些瓦片上的内核计算可以相互独立地进行。需要注意的是，并不是所有数据结构都可以根据任意内核函数被划分为瓦片。
@@ -164,6 +167,9 @@ CUDA 中共享内存和寄存器之间的一个重要区别是，驻留在共享
 这些阶段的创建是减少对全局内存访问的关键。每个阶段关注输入矩阵值的小子集，线程可以协作地将子集加载到共享内存中，并使用共享内存中的值来满足它们在该阶段的重叠输入需求。
 
 还要注意，Mds 和 Nds 在各阶段之间被重复使用。在每个阶段，相同的 Mds 和 Nds 被重复使用来存放该阶段使用的 M 和 N 元素的子集。这允许更小的共享内存服务于大多数全局内存访问。这是因为每个阶段关注输入矩阵元素的小子集。这种集中访问行为称为局部性。当算法表现出局部性时，有机会使用小的高速内存来服务大多数访问，并将这些访问从全局内存中移除。局部性对于实现多核 CPU 和许多线程 GPU 的高性能同样重要。我们将在第 6 章《性能考虑》中回到局部性概念。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
 
 ## 5.4 瓦片矩阵乘法内核
 
@@ -232,6 +238,9 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int Width){
 
 尽管带状矩阵乘法内核的性能提升令人印象深刻，但它确实做出了一些简化假设。首先，假设矩阵的宽度是线程块宽度的倍数。这会阻止内核正确处理宽度为任意值的矩阵。第二个假设是矩阵是方形矩阵。这在实践中并不总是如此。在下一节中，我们将展示一个带有边界检查的内核，以去除这些假设。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
+
 ## 5.5 边界检查
 
 我们现在将瓦片矩阵乘法内核扩展到处理任意宽度的矩阵。这些扩展将允许内核正确处理宽度不是瓦片宽度倍数的矩阵。让我们将图 5.7 中的小示例更改为使用 3x3 的 M、N 和 P 矩阵。修订后的示例如图 5.11 所示。注意，矩阵的宽度为 3，这不是瓦片宽度（2）的倍数。图 5.11 显示了块 `<sub>0,0</sub>` 第二阶段的内存访问模式。我们可以看到，线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 将尝试加载不存在的 M 元素。同样，我们也看到线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 将尝试访问不存在的 N 元素。
@@ -288,6 +297,9 @@ if (Row < Width) && (Col < Width){
 
 幸运的是，将我们的内核进一步扩展为通用矩阵乘法内核非常简单。我们需要做一些简单的更改。首先，将 `Width` 参数替换为三个无符号整数参数：`j`、`k` 和 `l`。其中，`Width` 用于表示 M 的高度或 P 的高度时，用 `j` 替换它；`Width` 用于表示 M 的宽度或 N 的高度时，用 `k` 替换它；`Width` 用于表示 N 的宽度或 P 的宽度时，用 `l` 替换它。具有这些更改的内核修订留作练习。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
+
 ## 5.6 内存使用对占用率的影响
 
 回顾一下，在第4章《计算架构与调度》中，我们讨论了最大化线程在 SM（流处理器）上的占用率的重要性，以便能够容忍长延迟操作。内核的内存使用在占用率调整中扮演着重要角色。虽然 CUDA 寄存器和共享内存可以极大地减少对全局内存的访问次数，但必须小心地保持在 SM 的这些内存的容量范围内。每个 CUDA 设备提供有限的资源，这限制了在给定应用中可以同时驻留在 SM 中的线程数量。一般来说，每个线程所需的资源越多，能够驻留在每个 SM 中的线程数量就越少。
@@ -334,6 +346,9 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int Width,
 ```
 > 图 5.14 带有动态大小共享内存使用的瓦片矩阵乘法内核。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
+
 ## 5.7 总结
 
 总之，现代处理器中程序的执行速度可能会受到内存速度的严重限制。为了实现 CUDA 设备执行吞吐量的良好利用，需要在内核代码中追求高的计算与全局内存访问比。如果比率低，内核是内存绑定的。也就是说，其执行速度受到从内存中访问操作数的速率的限制。
@@ -347,6 +362,9 @@ CUDA 提供了对寄存器、共享内存和常量内存的访问。这些内存
 缓存的大小也有限，并且需要计算展示局部性。因此，读者在为其他类型的并行计算系统使用其他编程模型开发并行应用程序时，也会发现瓦片算法是有用的。
 
 我们本章的目标是介绍局部性、瓦片技术和不同的 CUDA 内存类型。我们介绍了使用共享内存的瓦片矩阵乘法内核。我们进一步研究了边界测试条件的需要，以允许在应用瓦片技术时支持任意数据维度。我们还简要讨论了动态大小共享内存分配的使用，以便内核可以根据硬件能力调整每个块使用的共享内存大小。我们没有讨论寄存器在瓦片技术中的使用。我们将在本书第二部分讨论并行算法模式时解释寄存器在瓦片算法中的使用。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
 
 ## 练习题
 
@@ -480,3 +498,6 @@ CUDA 提供了对寄存器、共享内存和常量内存的访问。这些内存
     b. **内核使用 256 线程/块，31 寄存器/线程，以及 8 KB 的共享内存/SM。**
 
        **解答：** 该内核不能达到完全占用，因为每个线程块使用的寄存器数为 256 × 31 = 7,936，远低于寄存器限制，但每个 SM 的共享内存使用量为 8 KB。如果每个 SM 的共享内存使用量达到限制，则可能会影响内核的完全占用。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E4%B8%8E%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7.md#5_%E5%86%85%E5%AD%98%E6%9E%B6%E6%9E%84%E5%92%8C%E6%95%B0%E6%8D%AE%E5%B1%80%E9%83%A8%E6%80%A7)|
+|-|
