--- a/6_性能考虑.md
+++ b/6_性能考虑.md
@@ -72,42 +72,58 @@ CUDA 设备的全局内存是使用 DRAM 实现的。数据位被存储在 DRAM 
 
 拼车需要希望拼车的工人妥协并达成一个共同的通勤时间安排。图 6.6 的上半部分展示了拼车的良好时间安排模式。时间从左到右。工人 A 和工人 B 的睡眠、工作和晚餐时间表相似。这使得这两位工人更容易在一辆车中一起去上班和回家。他们相似的时间表使他们更容易达成共同的出发时间和回家时间。在这种情况下，工人 A 和工人 B 的时间表非常不同。工人 A 彻夜狂欢，白天睡觉，晚上上班。工人 B 晚上睡觉，早上上班，6:00 下午回家吃晚餐。在这种情况下，时间表差异如此之大，以至于这两位工人根本无法协调共同的上班和回家的时间安排。
 
+![image](https://github.com/user-attachments/assets/c3ceace2-022d-4e5a-ab0f-5d84dc5b7edf)  
+> 图 6.6 拼车的良好时间安排模式
+
 内存合并与拼车安排非常相似。我们可以将数据视为通勤者，将 DRAM 访问请求视为车辆。当 DRAM 请求的速率超过 DRAM 系统提供的访问带宽时，交通拥堵会增加，算术单元会变得空闲。如果多个线程访问相同的 DRAM 位置的数据，它们可能会形成一个“拼车”并将它们的访问合并为一个 DRAM 请求。然而，这需要线程具有类似的执行时间表，以便它们的数据访问可以合并成一个请求。在同一个 warp 中的线程是完美的候选者，因为它们都以 SIMD 执行方式同时执行加载指令。
 
 ## 6.2 隐藏内存延迟
+正如我们在第6.1节所解释的，DRAM突发传输是一种并行组织形式：在DRAM核心阵列中，多个位置被并行访问。然而，单靠突发传输不足以实现现代处理器所需的DRAM访问带宽。DRAM系统通常采用另外两种并行组织形式：储存体和通道。在最高层次上，一个处理器包含一个或多个通道。每个通道都是一个带有总线的内存控制器，该总线将一组DRAM储存体连接到处理器。图6.7展示了一个包含四个通道的处理器，每个通道通过总线将四个DRAM储存体连接到处理器。在实际系统中，处理器通常有一到八个通道，并且每个通道连接大量的储存体。
 
-正如我们在第 6.1 节中所解释的，DRAM 突发是一种并行组织形式：多个位置在 DRAM 核心阵列中并行访问。然而，仅仅依靠突发还不足以实现现代处理器所需的 DRAM 访问带宽。DRAM 系统通常还采用了另外两种并行组织形式：银行和通道。在最高层级，处理器包含一个或多个通道。每个通道是一个内存控制器，其总线连接一组 DRAM 银行到处理器。图 6.7 说明了一个包含四个通道的处理器，每个通道都有一条总线，将四个 DRAM 银行连接到处理器。在实际系统中，处理器通常有一个到八个通道，每个通道连接大量银行。
+总线的数据传输带宽由其宽度和时钟频率定义。现代双倍数据速率（DDR）总线在每个时钟周期执行两次数据传输：一次在时钟周期的上升沿，另一次在下降沿。例如，一个时钟频率为1 GHz的64位DDR总线的带宽为8B * 2 * 1 GHz = 16GB/s。这看起来是一个很大的数值，但对现代CPU和GPU来说往往不够。一个现代CPU可能需要至少32 GB/s的内存带宽，而一个现代GPU可能需要256 GB/s。对于这个例子，CPU需要2个通道，GPU则需要16个通道。
 
-总线的数据传输带宽由其宽度和时钟频率定义。现代的双倍数据速率（DDR）总线每个时钟周期进行两次数据传输：一次在上升沿，一次在下降沿。例如，时钟频率为 1 GHz 的 64 位 DDR 总线具有 8B*2*1 GHz=16GB/s 的带宽。这看起来是一个很大的数字，但对于现代 CPU 和 GPU 通常还不够大。一个现代 CPU 可能需要至少 32 GB/s 的内存带宽，而现代 GPU 可能需要 256 GB/s。以这个例子来说，CPU 需要 2 个通道，而 GPU 需要 16 个通道。
+对于每个通道，连接到它的储存体数量取决于完全利用总线数据传输带宽所需的储存体数量。如图6.8所示，每个储存体包含一个DRAM单元阵列、用于访问这些单元的感应放大器以及用于将突发数据传输到总线的接口（第6.1节）。
 
-对于每个通道，连接到其上的银行数量由完全利用总线的数据传输带宽所需的银行数量决定。这在图 6.8 中有所说明。每个银行包含一个 DRAM 单元阵列、访问这些单元的传感放大器，以及将数据突发传送到总线的接口（第 6.1 节）。
+![image](https://github.com/user-attachments/assets/97107978-d53f-494a-a512-00a81a3f8f8f)
+> 图6.7 DRAM系统中的通道和储存体。
 
-图 6.8(A) 说明了当单个银行连接到通道时的数据传输时序。它显示了对银行中 DRAM 单元的两个连续内存读取访问的时序。回想第 6.1 节，每次访问涉及解码器启用单元的长延迟，以及单元与传感放大器共享存储电荷的过程。这个延迟显示为时间框左端的灰色部分。一旦传感放大器完成工作，突发数据就会通过总线传送。通过总线传送突发数据的时间显示为图 6.8 中时间框的左侧黑色部分。第二次内存读取访问将经历类似的长访问延迟（时间框黑色部分之间的灰色部分），然后其突发数据才能被传输（右侧黑色部分）。
+图6.8(A)展示了当单个储存体连接到通道时的数据传输时序。它显示了对储存体中DRAM单元的两个连续内存读取访问的时序。回忆第6.1节，每次访问都涉及解码器启用单元和单元与感应放大器共享其存储电荷的长延迟。这个延迟显示为时间帧左端的灰色部分。一旦感应放大器完成其工作，突发数据就会通过总线传输。图6.8中的时间帧左侧黑色部分显示了通过总线传输突发数据的时间。第二次内存读取访问将经历类似的长访问延迟（时间帧中黑色部分之间的灰色部分）后，其突发数据才能传输（右侧黑色部分）。
 
-实际上，访问延迟（灰色部分）远长于数据传输时间（黑色部分）。显然，单银行组织的访问传输时序将大大低于通道总线的数据传输带宽的利用率。例如，如果 DRAM 单元阵列访问延迟与数据传输时间的比率为 20:1，那么通道总线的最大利用率将是 1/21=4.8%；即一个 16 GB/s 的通道将以不超过 0.76 GB/s 的速率向处理器传送数据。这显然不可接受。这个问题通过将多个银行连接到一个通道总线来解决。
+实际上，访问延迟（灰色部分）远长于数据传输时间（黑色部分）。显然，单储存体组织的访问传输时序会严重低效地利用通道总线的数据传输带宽。例如，如果DRAM单元阵列访问延迟与数据传输时间的比率是20:1，那么通道总线的最大利用率将是1/21=4.8%；即一个16 GB/s的通道只能以不超过0.76 GB/s的速度向处理器传输数据。这是完全不可接受的。这个问题通过将多个储存体连接到通道总线来解决。
 
-当两个银行连接到一个通道总线时，可以在第一个银行服务另一个访问时启动对第二个银行的访问。因此，可以重叠访问 DRAM 单元阵列的延迟。图 6.8(B) 显示了两个银行组织的时序。我们假设银行 0 在图 6.8 所示的窗口之前开始访问。第一个银行开始访问其单元阵列后不久，第二个银行也开始访问其单元阵列。当银行 0 的访问完成时，它传输突发数据（时间框左侧最黑的部分）。一旦银行 0 完成数据传输，银行 1 可以传输其突发数据（第二个黑色部分）。这种模式会对后续访问重复。
+当两个储存体连接到通道总线时，可以在第一个储存体处理另一个访问时启动第二个储存体的访问。因此，可以重叠访问DRAM单元阵列的延迟。图6.8(B)展示了两储存体组织的时序。我们假设储存体0在图6.8中显示的窗口时间之前已经启动访问。不久之后，第二个储存体也开始访问其单元阵列。当储存体0的访问完成后，它传输突发数据（时间帧最左边的黑色部分）。一旦储存体0完成数据传输，储存体1可以传输其突发数据（第二个黑色部分）。这种模式重复进行下一次访问。
 
-从图 6.8(B) 可以看到，通过拥有两个银行，可以将通道总线的数据传输带宽利用率翻倍。通常，如果单元阵列访问延迟与数据传输时间的比率为 R，我们需要至少 R + 1 个银行，如果希望充分利用通道总线的数据传输带宽。例如，如果比率为 20，则每个通道总线需要至少 21 个银行。通常，连接到每个通道总线的银行数量需要大于 R，原因有两个。一是拥有更多的银行可以减少多个同时访问目标相同银行的概率，这种现象称为银行冲突。由于每个银行一次只能服务一个访问，因此无法重叠这些冲突访问的单元阵列访问延迟。拥有更多的银行增加了这些访问分散到多个银行的概率。第二个原因是每个单元阵列的大小设定以实现合理的延迟和制造能力。这限制了每个银行可以提供的单元数量。可能需要许多银行来支持所需的内存大小。
+![image](https://github.com/user-attachments/assets/a460f91c-bbfe-4384-97dd-fb49986c549c)
+> 图6.8 储存体的使用提高了通道的数据传输带宽利用率。
 
-线程的并行执行与 DRAM 系统的并行组织之间存在重要联系。为了实现设备指定的内存访问带宽，必须有足够数量的线程同时进行内存访问。这一观察反映了最大化占用的另一个好处。回想第 4 章《计算架构与调度》，我们看到最大化占用确保流处理器（SMs）上有足够的线程驻留，以隐藏核心管线延迟，从而有效利用指令吞吐量。现在我们看到，最大化占用还有额外的好处，即确保进行足够的内存访问请求以隐藏 DRAM 访问延迟，从而有效利用内存带宽。当然，为了实现最佳带宽利用，这些内存访问必须均匀分布在各个通道和银行之间，并且每个对银行的访问也必须是合并的访问。
+从图6.8(B)中可以看出，通过拥有两个储存体，我们可以潜在地将通道总线的数据传输带宽利用率提高一倍。一般来说，如果单元阵列访问延迟与数据传输时间的比率是R，我们需要至少R + 1个储存体才能充分利用通道总线的数据传输带宽。例如，如果比率是20，我们将需要至少21个储存体连接到每个通道总线上。通常，每个通道总线上连接的储存体数量需要大于R，原因有二。一是拥有更多储存体减少了多个同时访问目标同一个储存体的概率，这种现象称为储存体冲突。由于每个储存体一次只能服务一个访问，这些冲突访问的单元阵列访问延迟不能再被重叠。拥有更多的储存体增加了这些访问分布在多个储存体中的概率。第二个原因是，每个单元阵列的大小设定为实现合理的延迟和可制造性。这限制了每个储存体能提供的单元数量。为了支持所需的内存大小，可能需要很多储存体。
 
-图 6.9 显示了将数组 M 的元素分配到通道和银行的一个简单示例。我们假设突发大小为两个元素（8 字节）。分配由硬件设计完成。通道和银行的地址安排如下：数组的前 8 字节（M[0] 和 M[1]）存储在通道 0 的银行 0 中，接下来的 8 字节（M[2] 和 M[3]）存储在通道 1 的银行 0 中，接下来的 8 字节（M[4] 和 M[5]）存储在通道 2 的银行 0 中，接下来的 8 字节（M[6] 和 M[7]）存储在通道 3 的银行 0 中。
+并行执行线程与DRAM系统的并行组织之间存在重要联系。为了实现设备指定的内存访问带宽，必须有足够数量的线程进行同时内存访问。这一观察反映了最大化占用率的另一个好处。回想第4章“计算架构和调度”中，我们看到最大化占用率确保有足够多的线程驻留在流处理器（SMs）上以隐藏核心流水线延迟，从而高效地利用指令吞吐量。正如我们现在看到的，最大化占用率还有一个额外好处，即确保有足够多的内存访问请求以隐藏DRAM访问延迟，从而高效地利用内存带宽。当然，要实现最佳带宽利用率，这些内存访问必须均匀分布在通道和储存体之间，并且每次对储存体的访问也必须是合并访问。
 
-此时，分配回绕到通道 0，但将使用银行 1 存储接下来的 8 字节（M[8] 和 M[9]）。因此，元素 M[10] 和 M[11] 将在通道 1 的银行 1 中，M[12] 和 M[13] 将在通道 2 的银行 1 中，M[14] 和 M[15] 将在通道 3 的银行 1 中。虽然图中没有显示，但任何额外的元素将回绕并从通道 0 的银行 0 开始。例如，如果有更多元素，M[16] 和 M[17] 将存储在通道 0 的银行 0 中，M[18] 和 M[19] 将存储在通道 1 的银行 0 中，依此类推。
+图6.9展示了将数组M的元素分配到通道和储存体的示例。我们假设突发大小为两个元素（8字节）。分配由硬件设计完成。通道和储存体的地址分配如下：数组的前8字节（M[0]和M[1]）存储在通道0的储存体0中，接下来的8字节（M[2]和M[3]）存储在通道1的储存体0中，再接下来的8字节（M[4]和M[5]）存储在通道2的储存体0中，接下来的8字节（M[6]和M[7]）存储在通道3的储存体0中。
 
-图 6.9 中所示的分配方案，通常称为交错数据分配，将元素分布在系统中的银行和通道之间。此方案确保即使是相对较小的数组也能得到很好的分布。因此，我们仅分配足够的元素以充分利用通道 0 的银行 0 的 DRAM 突发，然后再移动到通道 1 的银行 0。在我们的简单示例中，只要我们至少有 16 个元素，分配就会涉及到所有的通道和银行来存储这些元素。
+![image](https://github.com/user-attachments/assets/ccd1b525-1ea8-417e-9b0a-3f1e0985acb3)
+> 图6.9 将数组元素分配到通道和储存体中。
 
-我们现在将说明并行线程执行与并行内存组织之间的互动。我们将使用图 5.5 的示例，复制为图 6.10。我们假设乘法将使用 2*2 的线程块和 2*2 的块。
+此时，分配回到通道0，但会使用储存体1来存储接下来的8字节（M[8]和M[9]）。因此，元素M[10]和M[11]将存储在通道1的储存体1中，M[12]和M[13]将存储在通道2的储存体1中，M[14]和M[15]将存储在通道3的储存体1中。尽管图中没有显示，任何额外的元素将会回到通道0的储存体0。例如，如果有更多元素，M[16]和M[17]将存储在通道0的储存体0中，M[18]和M[19]将存储在通道1的储存体0中，依此类推。
 
-在内核执行的阶段 0 中，所有四个线程块将加载它们的第一个块。图 6.11 显示了每个块中涉及的 M 元素。第 2 行显示了阶段 0 中访问的 M 元素及其 2D 索引。第 3 行显示了相同的 M 元素及其线性化索引。假设所有线程块并行执行。我们看到每个块将进行两个合并的访问。
+图6.9所示的分配方案，通常称为交错数据分配，将元素分布在系统中的储存体和通道之间。这个方案确保即使是相对较小的数组也能很好地分布。因此，我们只需分配足够的元素以充分利用通道0的储存体0的DRAM突发，然后再移动到通道1的储存体0。在我们的示例中，只要我们有至少16个元素，分配就会涉及到所有通道和储存体来存储这些元素。
 
-根据图 6.9 中的分配，这些合并
+现在我们说明并行线程执行与并行内存组织之间的相互作用。我们将使用图5.5中的示例，复制为图6.10。我们假设乘法将使用2*2线程块和2*2瓦片进行。
 
-的访问将发生在通道 0 的两个银行以及通道 2 的两个银行中。这四个访问将并行进行，以利用两个通道，同时提高每个通道的数据传输带宽利用率。
 
-我们还看到 Block0,0 和 Block0,1 将加载相同的 M 元素。大多数现代设备都配备了缓存，这些缓存会将这些访问合并为一个，只要这些块的执行时间足够接近。实际上，GPU 设备中的缓存内存主要设计用于合并此类访问，减少对 DRAM 系统的访问次数。
+![image](https://github.com/user-attachments/assets/73241896-649b-49dc-a5c0-ddc844ffc19b)
+> 图6.10 矩阵乘法的小示例（复制自图5.5）。
 
-第 4 行和第 5 行显示了内核执行阶段 1 中加载的 M 元素。我们看到这些访问现在发生在通道 1 和通道 3 的银行中。再次，这些访问将并行进行。读者应该清楚线程的并行执行与 DRAM 系统的并行结构之间存在共生关系。一方面，良好的 DRAM 系统访问带宽利用要求许多线程同时访问 DRAM 中的数据。另一方面，设备的执行吞吐量依赖于 DRAM 系统的并行结构，即银行和通道的良好利用。例如，如果同时执行的线程都访问相同通道中的数据，则内存访问吞吐量和设备的整体执行速度将大大降低。
+在内核执行的第0阶段，所有四个线程块将加载它们的第一个瓦片。图6.11显示了每个瓦片中涉及的M元素。第2行显示了第0阶段访问的M元素及其二维索引。第3行显示了相同的M元素及其线性索引。假设所有线程块并行执行。我们看到每个块将进行两次合并访问。
 
-读者可以验证，将两个更大的矩阵（如 8*8）相乘，使用相同的 2*2 线程块配置，将会利用图 6.9 中的所有四个通道。另一方面，增加 DRAM 突发大小将需要乘法计算更大的矩阵，以充分利用所有通道的数据传输带宽。
+![image](https://github.com/user-attachments/assets/12ec57af-79a2-4068-9ba4-1ede1d9d13ea)
+> 图6.11 线程块在每个阶段加载的M元素。
+
+根据图6.9中的分配，这些合并访问将进行到通道0的两个储存体以及通道2的两个储存体。这四次访问将并行进行，以利用两个通道并提高每个通道的数据传输带宽利用率。
+
+我们还看到Block0,0和Block0,1将加载相同的M元素。大多数现代设备配备了缓存，只要这些块的执行时序足够接近，就会将这些访问合并为一次。事实上，GPU设备中的缓存主要设计用于合并这种访问并减少对DRAM系统的访问次数。
+
+第4和第5行显示了内核执行第1阶段加载的M元素。我们看到这些访问现在进行到通道1和通道3的储存体。再次强调，这些访问将并行进行。读者应该清楚，并行线程执行和DRAM系统的并行结构之间存在共生关系。一方面，充分利用DRAM系统潜在访问带宽需要许多线程同时访问DRAM中的数据。另一方面，设备的执行吞吐量依赖于DRAM系统并行结构的良好利用，即储存体和通道。例如，如果同时执行的线程都访问同一通道中的数据，内存访问吞吐量和整体设备执行速度将大大降低。
+
+我们邀请读者验证用相同的2*2线程块配置来相乘两个较大的矩阵（如8*8）将利用图6.9中的所有四个通道。另一方面，增加的DRAM突发大小需要更大的矩阵乘法来充分利用所有通道的数据传输带宽。
